fixed profile saved slider overlapping with mobile navbar

--- a/client/src/pages/Profile/styles.scss
+++ b/client/src/pages/Profile/styles.scss
@@ -95,6 +95,7 @@
         margin: 0 auto;
         background: $darkblue;
         border-radius: 20px;
+        z-index: 0;
 
         label {
           cursor: pointer;
