--- a/client/src/pages/Sweeper/styles.scss
+++ b/client/src/pages/Sweeper/styles.scss
@@ -111,6 +111,7 @@
             h1 {
               font-size: 22px;
               letter-spacing: .3px;
+              text-transform: capitalize;
             }
             
             h2 {
